--- a/HipagesEDA.ipynb
+++ b/HipagesEDA.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "cb42c09e",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "4          small                  360.0         0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "a86de858",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "46c3dba9",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
        "max              3245.000000     1.000000  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "34db4efd",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
        "Name: category, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "e41ba388",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "Name: accepted, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "09756081",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
        "Name: accepted, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "27581619",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "b2db9cd8",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "13e04283",
    "metadata": {},
    "outputs": [
@@ -462,20 +462,20 @@
      "data": {
       "text/plain": [
        "12:25:06    22\n",
-       "12:01:06    19\n",
        "10:03:06    19\n",
-       "11:32:06    18\n",
+       "12:01:06    19\n",
        "13:43:06    18\n",
+       "11:32:06    18\n",
        "            ..\n",
-       "20:20:07     1\n",
-       "05:26:07     1\n",
-       "09:16:07     1\n",
-       "05:57:07     1\n",
-       "19:50:07     1\n",
+       "14:30:07     1\n",
+       "01:26:07     1\n",
+       "04:27:07     1\n",
+       "04:11:07     1\n",
+       "16:22:07     1\n",
        "Name: time, Length: 1969, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "a11a5819",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "20fea2d6",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
        "max              3245.000000     1.000000  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "28aeb0fd",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "Name: accepted, Length: 2918, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "8761986a",
    "metadata": {},
    "outputs": [],
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "5bd08d36",
    "metadata": {},
    "outputs": [],
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "42856c2d",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
        "Name: accepted, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,18 +755,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "df8d04e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "acceptedjobs = ~jobs['accepted'].isin([False])"
+    "acceptedjobs = jobs['accepted'].isin([True])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "30dc30c5",
+   "execution_count": 18,
+   "id": "2136eaf1",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
        "33     Afternoon  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,8 +912,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "86913601",
+   "execution_count": 19,
+   "id": "624c069e",
    "metadata": {},
    "outputs": [
     {
@@ -936,16 +936,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a43449ae",
+   "execution_count": 21,
+   "id": "f15932ab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "time_of_post               0\n",
+       "latitude                   0\n",
+       " longitude                 0\n",
+       "category                   0\n",
+       "number_of_tradies          0\n",
+       "estimated_size             0\n",
+       "number_of_impressions    110\n",
+       "accepted                   0\n",
+       "date                       0\n",
+       "time                       0\n",
+       "time_category              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobs.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b1859f81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2    False\n",
+       "3    False\n",
+       "4    False\n",
+       "Name: number_of_impressions, dtype: bool"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobs['number_of_impressions'].isnull().head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff615eb1",
+   "id": "fb2fdc7f",
    "metadata": {},
    "outputs": [],
    "source": []
