Further clean up and systemisation of the answer

--- a/HipagesEDA.ipynb
+++ b/HipagesEDA.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 167,
    "id": "cb42c09e",
    "metadata": {},
    "outputs": [
@@ -147,12 +147,14 @@
        "4          small                  360.0         0  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Question 1 - Does the time-of-day influence if a job would be accepted?\n",
+    "\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 168,
    "id": "a86de858",
    "metadata": {},
    "outputs": [
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 169,
    "id": "46c3dba9",
    "metadata": {},
    "outputs": [
@@ -329,7 +331,7 @@
        "max              3245.000000     1.000000  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,8 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "id": "ed4cd9e4",
+   "execution_count": 170,
+   "id": "9c46301a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 171,
    "id": "e41ba388",
    "metadata": {},
    "outputs": [
@@ -364,7 +366,7 @@
        "Name: accepted, dtype: int64"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,8 +377,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "a262f4be",
+   "execution_count": 172,
+   "id": "d917e6b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 173,
    "id": "8761986a",
    "metadata": {},
    "outputs": [],
@@ -408,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 174,
    "id": "5bd08d36",
    "metadata": {},
    "outputs": [],
@@ -418,8 +420,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "77b4bd7f",
+   "execution_count": 175,
+   "id": "b25b610a",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +596,7 @@
        "22            22  0.464516"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,8 +610,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "fe154e3c",
+   "execution_count": 176,
+   "id": "573f4fce",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +678,7 @@
        "4        Morning  0.104680"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 177,
    "id": "df8d04e2",
    "metadata": {},
    "outputs": [],
@@ -699,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 178,
    "id": "2136eaf1",
    "metadata": {},
    "outputs": [
@@ -829,7 +831,7 @@
        "33      Afternoon  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 179,
    "id": "624c069e",
    "metadata": {},
    "outputs": [
@@ -864,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 180,
    "id": "5e7f5858",
    "metadata": {},
    "outputs": [
@@ -888,8 +890,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "48250df8",
+   "execution_count": 181,
+   "id": "04725aef",
    "metadata": {},
    "outputs": [
     {
@@ -1194,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101c4b95",
+   "id": "1abf9a65",
    "metadata": {},
    "outputs": [],
    "source": []
