Add CHi-Square to review statistical significance

--- a/HipagesEDA.ipynb
+++ b/HipagesEDA.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 73,
    "id": "cb42c09e",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "4          small                  360.0         0  "
       ]
      },
-     "execution_count": 167,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 74,
    "id": "a86de858",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 75,
    "id": "46c3dba9",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "max              3245.000000     1.000000  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 76,
    "id": "9c46301a",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 77,
    "id": "e41ba388",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
        "Name: accepted, dtype: int64"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 78,
    "id": "d917e6b7",
    "metadata": {},
    "outputs": [],
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 79,
    "id": "8761986a",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 80,
    "id": "5bd08d36",
    "metadata": {},
    "outputs": [],
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 81,
    "id": "b25b610a",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
        "22            22  0.464516"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,88 +610,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 82,
    "id": "573f4fce",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>period_of_post</th>\n",
-       "      <th>accepted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afternoon</td>\n",
-       "      <td>0.426600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>EarlyMorning</td>\n",
-       "      <td>0.106686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Evening</td>\n",
-       "      <td>0.416844</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>LateNight</td>\n",
-       "      <td>0.417323</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Morning</td>\n",
-       "      <td>0.104680</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  period_of_post  accepted\n",
-       "0      Afternoon  0.426600\n",
-       "1   EarlyMorning  0.106686\n",
-       "2        Evening  0.416844\n",
-       "3      LateNight  0.417323\n",
-       "4        Morning  0.104680"
-      ]
-     },
-     "execution_count": 176,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Check acceptance rate by period_of_post\n",
     "\n",
-    "jobs.groupby('period_of_post')['accepted'].mean().reset_index()"
+    "jobs.groupby('period_of_post')['accepted'].mean().reset_index()\n",
+    "\n",
+    "acceptance_rate_by_period = jobs.groupby('period_of_post')['accepted'].mean().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 83,
    "id": "df8d04e2",
    "metadata": {},
    "outputs": [],
@@ -701,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 84,
    "id": "2136eaf1",
    "metadata": {},
    "outputs": [
@@ -831,7 +764,7 @@
        "33      Afternoon  "
       ]
      },
-     "execution_count": 178,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 85,
    "id": "624c069e",
    "metadata": {},
    "outputs": [
@@ -866,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 86,
    "id": "5e7f5858",
    "metadata": {},
    "outputs": [
@@ -890,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 87,
    "id": "04725aef",
    "metadata": {},
    "outputs": [
@@ -914,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 88,
    "id": "1e983e80",
    "metadata": {},
    "outputs": [
@@ -982,7 +915,7 @@
        "1                    1360           150      589        159      378"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 89,
    "id": "5917fbe7",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1080,7 @@
        "4                0           1             0           0  "
       ]
      },
-     "execution_count": 165,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1095,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 91,
+   "id": "a810e058",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'period_of_post'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3079\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3080\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3081\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'period_of_post'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-91-033d0be0205a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Create a contingency table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcontingency_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrosstab\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'period_of_post'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjobs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'accepted'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Perform Chi-Square test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3022\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3023\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3024\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3025\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3026\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3080\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3081\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3082\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3083\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3084\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'period_of_post'"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import chi2_contingency\n",
+    "\n",
+    "# Create a contingency table\n",
+    "contingency_table = pd.crosstab(jobs['period_of_post'], jobs['accepted'])\n",
+    "\n",
+    "# Perform Chi-Square test\n",
+    "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "# Display the results\n",
+    "print(f\"Chi-Square Statistic: {chi2}\")\n",
+    "print(f\"P-Value: {p}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "id": "d50d6072",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1147,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1196,7 +1171,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1abf9a65",
+   "id": "178596ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Plot the acceptance rate by time period\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.barplot(data=acceptance_rate_by_period , x='period_of_post', y='accepted', order=['EarlyMorning', 'Morning', 'Afternoon', 'Evening', 'LateNight'])\n",
+    "plt.title('Acceptance Rate by Time Period of Post')\n",
+    "plt.xlabel('Time Period of Post')\n",
+    "plt.ylabel('Acceptance Rate')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db3407cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "703125bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ded3e1f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c5da62e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d5506dd",
    "metadata": {},
    "outputs": [],
    "source": []
